Prática - Lanchonete do Coral 55

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Lanchonete do Coral 55</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -8,7 +9,7 @@
   <div id="recipiente">
     <div id="cabecalho">
       <h1>Lanchonete do Coral 55</h1>
-      <h2>O melhor açaí marítimo da região</h2>
+      <h2>O melhor <em>açaí</em> marítimo da região</h2>
     </div>
     <div id="conteudo">
       <div id="lateral">
@@ -20,19 +21,19 @@
       </div>
       <div id="cardapio">
         <h3>Salgados</h3>
-        Pão de queijo de égua marinha $ 0,99
-        Hamburguer de microinsetos com salada de algas ou de musgo $ 2,49
+        Pão de queijo de égua marinha $ 0,99<br>
+        Hamburguer de microinsetos com salada de algas ou de musgo $ 2,49<br>
         <h3>Pratos</h3>
-        Açaí do manguezal 500ml $ 4,99
-        Açaí marítimo (assinatura) 500ml $ 6,99
-        Algas verdes fritas $ 7,49
-        Plâncton ao molho de maracujá $ 12,49
-        Plâncton do pacífico (importado) marinado $ 19,99
+        Açaí do manguezal 500ml $ 4,99<br>
+        Açaí marítimo (assinatura) 500ml $ 6,99<br>
+        Algas verdes fritas $ 7,49<br>
+        Plâncton ao molho de maracujá $ 12,49<br>
+        Plâncton do pacífico (importado) marinado $ 19,99<br>
         <h3>Bebes</h3>
-        Água temperada (cortesia)
-        Água doce importada (copo) $ 29,49
-        Coquetel de algas (alcoólico) $ 8,99
-        Coquetel de algas (kids) $ 5,49
+        Água temperada (cortesia)<br>
+        Água doce importada (copo) $ 29,49<br>
+        Coquetel de algas (alcoólico) $ 8,99<br>
+        Coquetel de algas (kids) $ 5,49<br>
       </div>
     </div>
     <div id="rodape">
