Prática - Lanchonete do Coral 55
Tentativa de ajuste de alinhamento do texto de tipo preço.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
       </div>
       <div id="cardapio">
         <h3>Salgados</h3>
-        Pão de queijo de égua marinha $ 0,99<br>
-        Hamburguer de microinsetos com salada de algas ou de musgo $ 2,49<br>
+        Pão de queijo de égua marinha <span id="preco">$ 0,99</span><br>
+        Hamburguer de microinsetos com salada de algas ou de musgo <span id="preco">$ 2,49</span><br>
         <h3>Pratos</h3>
-        Açaí do manguezal 500ml $ 4,99<br>
-        Açaí marítimo (assinatura) 500ml $ 6,99<br>
-        Algas verdes fritas $ 7,49<br>
-        Plâncton ao molho de maracujá $ 12,49<br>
-        Plâncton do pacífico (importado) marinado $ 19,99<br>
+        Açaí do manguezal 500ml <span id="preco">$ 4,99</span><br>
+        Açaí marítimo (assinatura) 500ml <span id="preco">$ 6,99</span><br>
+        Algas verdes fritas <span id="preco">$ 7,49</span><br>
+        Plâncton ao molho de maracujá <span id="preco">$ 12,49</span><br>
+        Plâncton do pacífico (importado) marinado <span id="preco">$ 19,99</span><br>
         <h3>Bebes</h3>
-        Água temperada (cortesia)<br>
-        Água doce importada (copo) $ 29,49<br>
-        Coquetel de algas (alcoólico) $ 8,99<br>
-        Coquetel de algas (kids) $ 5,49<br>
+        Água temperada <span id="preco">(cortesia)</span><br>
+        Água doce importada (copo) <span id="preco">$ 29,49</span><br>
+        Coquetel de algas (alcoólico) <span id="preco">$ 8,99</span><br>
+        Coquetel de algas (kids) <span id="preco">$ 5,49</span><br>
       </div>
     </div>
     <div id="rodape">
